Update enum name

--- a/specification/cognitiveservices/data-plane/Language/preview/2022-04-01-preview/textanalytics.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-04-01-preview/textanalytics.json
@@ -2273,7 +2273,7 @@
       "items": {
         "type": "string",
         "x-ms-enum": {
-          "name": "PiiCategory",
+          "name": "TranscriptionPiiCategory",
           "modelAsString": true
         },
         "enum": [
