corrected TaskState.status type

--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/common.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/common.json
@@ -208,6 +208,7 @@
         },
         "status": {
           "description": "The status of the task at the mentioned last update time.",
+          "type": "string",
           "enum": [
             "notStarted",
             "running",
