removed added comma

--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/common.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/common.json
@@ -203,7 +203,7 @@
       "properties": {
         "lastUpdateDateTime": {
           "description": "The last updated time in UTC for the task.",
-          "format": "date-time",
+          "format": "date-time"
         },
         "status": {
           "description": "The status of the task at the mentioned last update time.",
