--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/common.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/common.json
@@ -203,11 +203,11 @@
       "properties": {
         "lastUpdateDateTime": {
           "description": "The last updated time in UTC for the task.",
-          "format": "date-time"
+          "format": "date-time",
+          "type": "string"
         },
         "status": {
           "description": "The status of the task at the mentioned last update time.",
-          "type": "string",
           "enum": [
             "notStarted",
             "running",
