--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations.json
@@ -85,6 +85,162 @@
           }
         }
       }
+    },
+    "/language/analyze-conversations/jobs": {
+      "post": {
+        "operationId": "AnalyzeConversation_SubmitJob",
+        "description": "Analyzes the input conversation utterance.",
+        "parameters": [
+          {
+            "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
+          },
+          {
+            "name": "resource",
+            "in": "body",
+            "required": true,
+            "description": "The resource instance.",
+            "schema": {
+              "$ref": "#/definitions/AnalyzeConversationJobsInput"
+            }
+          }
+        ],
+        "responses": {
+          "202": {
+            "description": "The request has been accepted for processing, but processing has not yet completed.",
+            "headers": {
+              "Location": {
+                "description": "The location of an instance of AnalyzeConversationJobsInput",
+                "type": "string",
+                "format": "uri"
+              }
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "headers": {
+              "x-ms-error-code": {
+                "description": "String error code indicating what went wrong.",
+                "type": "string"
+              }
+            },
+            "schema": {
+              "$ref": "#/definitions/Azure.Core.Foundations.ErrorResponse"
+            }
+          }
+        }
+      }
+    },
+    "/language/analyze-conversations/jobs/{jobId}": {
+      "get": {
+        "operationId": "AnalyzeConversation_JobStatus",
+        "summary": "Get analysis status and results",
+        "description": "Get the status of an analysis job. A job can consist of one or more tasks. After all tasks succeed, the job transitions to the succeeded state and results are available for each task.",
+        "parameters": [
+          {
+            "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
+          },
+          {
+            "name": "jobId",
+            "in": "path",
+            "required": true,
+            "description": "job ID",
+            "type": "string"
+          },
+          {
+            "name": "showStats",
+            "in": "query",
+            "required": false,
+            "description": "(Optional) if set to true, response will contain request and document level statistics.",
+            "type": "boolean"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The request has succeeded.",
+            "schema": {
+              "$ref": "#/definitions/AnalyzeConversationJobState"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "headers": {
+              "x-ms-error-code": {
+                "description": "String error code indicating what went wrong.",
+                "type": "string"
+              }
+            },
+            "schema": {
+              "$ref": "#/definitions/Azure.Core.Foundations.ErrorResponse"
+            }
+          }
+        }
+      }
+    },
+    "/language/analyze-conversations/jobs/{jobId}:cancel": {
+      "delete": {
+        "operationId": "AnalyzeConversation_CancelJob",
+        "summary": "Cancel a long-running Text Analysis conversations job",
+        "description": "Cancel a long-running job for text analysis of conversations.",
+        "parameters": [
+          {
+            "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
+          },
+          {
+            "name": "jobId",
+            "in": "path",
+            "required": true,
+            "description": "job ID",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "202": {
+            "description": "The request has been accepted for processing, but processing has not yet completed.",
+            "headers": {
+              "Operation-Location": {
+                "description": "The location for monitoring the operation state.",
+                "type": "string",
+                "format": "uri"
+              }
+            },
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "string",
+                  "description": "The unique ID of the operation."
+                },
+                "status": {
+                  "$ref": "#/definitions/Azure.Core.Foundations.OperationState",
+                  "description": "The status of the operation"
+                },
+                "error": {
+                  "$ref": "#/definitions/Azure.Core.Foundations.Error",
+                  "description": "Error object that describes the error when status is \"Failed\"."
+                }
+              },
+              "description": "Provides status details for long running operations.",
+              "required": [
+                "id",
+                "status"
+              ],
+              "x-typespec-name": "Azure.Core.Foundations.OperationStatus<never, Azure.Core.Foundations.Error>"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "headers": {
+              "x-ms-error-code": {
+                "description": "String error code indicating what went wrong.",
+                "type": "string"
+              }
+            },
+            "schema": {
+              "$ref": "#/definitions/Azure.Core.Foundations.ErrorResponse"
+            }
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -214,6 +370,47 @@
     "AnalyzeConversationJobState": {
       "type": "object",
       "properties": {
+        "displayName": {
+          "type": "string",
+          "description": "display name"
+        },
+        "createdDateTime": {
+          "type": "string",
+          "format": "date-time",
+          "description": "Date and time job created"
+        },
+        "expirationDateTime": {
+          "type": "string",
+          "format": "date-time",
+          "description": "Date and time job expires"
+        },
+        "jobId": {
+          "type": "string",
+          "description": "job ID",
+          "readOnly": true
+        },
+        "lastUpdateDateTime": {
+          "type": "string",
+          "format": "date-time",
+          "description": "last updated date and time"
+        },
+        "status": {
+          "$ref": "#/definitions/State",
+          "description": "status"
+        },
+        "errors": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/ErrorResponse"
+          },
+          "x-ms-identifiers": [],
+          "description": "errors",
+          "x-typespec-name": "ErrorResponse[]"
+        },
+        "nextlink": {
+          "type": "string",
+          "description": "next link"
+        },
         "tasks": {
           "type": "object",
           "properties": {
@@ -263,13 +460,12 @@
       },
       "description": "Contains the status of the submitted job for analyzing a conversation, along with related statistics.",
       "required": [
+        "createdDateTime",
+        "jobId",
+        "lastUpdateDateTime",
+        "status",
         "tasks",
         "statistics"
-      ],
-      "allOf": [
-        {
-          "$ref": "#/definitions/JobState"
-        }
       ]
     },
     "AnalyzeConversationJobStatistics": {
@@ -294,7 +490,11 @@
         },
         "analysisInput": {
           "$ref": "#/definitions/MultiLanguageConversationAnalysisInput",
-          "description": "Analysis Input"
+          "description": "Analysis Input",
+          "x-ms-mutability": [
+            "read",
+            "create"
+          ]
         },
         "tasks": {
           "type": "array",
@@ -433,7 +633,11 @@
           "enum": [
             "Conversation"
           ],
-          "description": "The base class of a conversation input task."
+          "description": "The base class of a conversation input task.",
+          "x-ms-mutability": [
+            "read",
+            "create"
+          ]
         }
       },
       "description": "The base class of a conversation input task.",
@@ -705,6 +909,42 @@
         }
       },
       "description": "An object containing more specific information about the error. As per Microsoft One API guidelines - https://github.com/Microsoft/api-guidelines/blob/vNext/Guidelines.md#7102-error-condition-responses."
+    },
+    "Azure.Core.Foundations.OperationState": {
+      "type": "string",
+      "description": "Enum describing allowed operation states.",
+      "enum": [
+        "InProgress",
+        "Succeeded",
+        "Failed",
+        "Canceled"
+      ],
+      "x-ms-enum": {
+        "name": "OperationState",
+        "modelAsString": true,
+        "values": [
+          {
+            "name": "InProgress",
+            "value": "InProgress",
+            "description": "The operation is in progress."
+          },
+          {
+            "name": "Succeeded",
+            "value": "Succeeded",
+            "description": "The operation has completed successfully."
+          },
+          {
+            "name": "Failed",
+            "value": "Failed",
+            "description": "The operation has failed."
+          },
+          {
+            "name": "Canceled",
+            "value": "Canceled",
+            "description": "The operation has been canceled by the user."
+          }
+        ]
+      }
     },
     "BaseExtraInformation": {
       "type": "object",
@@ -1308,22 +1548,6 @@
         }
       ]
     },
-    "Conversations": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string",
-          "description": "id",
-          "x-ms-mutability": [
-            "create"
-          ]
-        }
-      },
-      "description": "Resource model",
-      "required": [
-        "id"
-      ]
-    },
     "ConversationsSummaryResult": {
       "type": "object",
       "properties": {
@@ -1441,24 +1665,6 @@
         "error"
       ]
     },
-    "DocumentErrorItem": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string",
-          "description": "The ID of the input document."
-        },
-        "error": {
-          "$ref": "#/definitions/ErrorResponseItem",
-          "description": "Error encountered."
-        }
-      },
-      "description": "Contains details of errors encountered during a job execution.",
-      "required": [
-        "id",
-        "error"
-      ]
-    },
     "EntitySubtype": {
       "type": "object",
       "properties": {
@@ -1503,19 +1709,6 @@
       }
     },
     "ErrorResponse": {
-      "type": "object",
-      "properties": {
-        "error": {
-          "$ref": "#/definitions/Azure.Core.Foundations.Error",
-          "description": "The error object."
-        }
-      },
-      "description": "Error response.",
-      "required": [
-        "error"
-      ]
-    },
-    "ErrorResponseItem": {
       "type": "object",
       "properties": {
         "error": {
@@ -1691,7 +1884,7 @@
         "errors": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/ErrorResponseItem"
+            "$ref": "#/definitions/ErrorResponse"
           },
           "x-ms-identifiers": [],
           "description": "errors",
@@ -1722,7 +1915,8 @@
         },
         "jobId": {
           "type": "string",
-          "description": "job ID"
+          "description": "job ID",
+          "readOnly": true
         },
         "lastUpdateDateTime": {
           "type": "string",
@@ -1736,7 +1930,7 @@
         "errors": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/ErrorResponseItem"
+            "$ref": "#/definitions/ErrorResponse"
           },
           "x-ms-identifiers": [],
           "description": "errors",
@@ -2236,7 +2430,7 @@
         "errors": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/DocumentErrorItem"
+            "$ref": "#/definitions/DocumentError"
           },
           "description": "Errors by document id.",
           "x-typespec-name": "DocumentError[]"
