--- a/dev/cognitiveservices/data-plane/Language/analyzetext.json
+++ b/dev/cognitiveservices/data-plane/Language/analyzetext.json
@@ -2046,6 +2046,10 @@
         },
         "stringIndexType": {
           "$ref": "common.json#/definitions/StringIndexType"
+        },
+        "query": {
+          "type": "string",
+          "description": "(Optional) If provided, the query will be used to extract most relevant sentences from the document."
         }
       },
       "allOf": [
